<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".userAuthentication.userLogin.resetPassword.ResetPassword">

    <TextView
        android:id="@+id/textView6"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title_Reset" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/just_enter_registered_email_to_sent_you_password_reset_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        style="@style/textInfoReset" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reset_email"
        style="@style/reset_email"
        android:hint="@string/enter_your_e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reSend"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        style="@style/cancel_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reSend"
        style="@style/resetBtn"
        android:text="@string/send_password_reset_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>