<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding = "@dimen/large_padding">
        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/EmailField"
            android:textColorHint="#E6DCDC"
            android:textColor="#E6DCDC"
            android:hint="@string/enter_your_e_mail" />
        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/PasswordField"
            android:textColorHint="#E6DCDC"
            android:textColor="#E6DCDC"
            android:hint="@string/password" />
        <!--  Button login -->
        <!--  Button NewAccount -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Loginbtn"
            android:text="@string/login"
            app:cornerRadius="80dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/link_signUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#E6DCDC"
            android:text="@string/no_account_yet_create_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/link_reset"
            android:text="@string/forgot_password"
            app:backgroundTint="@android:color/transparent"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#E6DCDC"
            />

    </LinearLayout>

    <!--<ImageView
        style="@style/LogoStyle"
        android:contentDescription="@string/todo"
        />-->


</LinearLayout>