<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/length_of_bar_in_field"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_actual_length_of_bar_in_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLength"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center">

           <Button
               android:id="@+id/btn_Submit_dialog"
               style="@style/okBtn"
               android:text="@string/submit"
               app:backgroundTint="@color/colorAccent" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:gravity="center">

           <Button
               android:id="@+id/btn_Cancel_Dialog"
               style="@style/cancelBtn"
               app:backgroundTint="@color/colorAccent"
               android:text="@string/cancle"
                />
       </LinearLayout>


   </LinearLayout>


</LinearLayout>