<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="108dp"
            android:layout_height="66dp"
            android:src="@drawable/bckicon"
            android:contentDescription="TODO" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <LinearLayout style="@style/loginsinguplbl">

            <TextView
                style="@style/login_signup_tv"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:text="@string/signup" />
            <View style="@style/view_style" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingLeft="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding">
            <!--  Email Label -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/texthintColor"
                android:typeface="monospace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/EmailField"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/enter_your_e_mail"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/texthintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/PasswordField"
                    android:fontFamily="@font/source_sans_pro"
                    android:hint="@string/password"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>


            //android:id="@+id/btn_Registration"
            <!--  Button CreateBtn -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Registration"
                style="@style/Loginbtn"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/create_account"
                app:cornerRadius="80dp" />

            <!--  Button Login -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/already_a_member_login"
                android:textAllCaps="false"
                android:textColor="@color/texthintColor"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
